# mathfin

./: .gitignore  LICENSE.TXT  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
base/: Makefile  Makefile.am  Makefile.in  conversion.hpp  error.cpp  error.h  error.hpp  errorTest.cpp  types.hpp
base/.deps/: errorTest.Po  libBase_la-error.Plo
docs/: Doxyfile  Doxyfile.in  Makefile.am
docs/html/: annotated.html  businessdayconvention_8hpp_source.html  class_fin_math_1_1_date.html  class_fin_math_1_1_error-members.html  class_fin_math_1_1_error.html  class_math_fin_1_1_period-members.html  class_math_fin_1_1_period.html  classes.html  date_8hpp_source.html  dir_296d53ceaeaa7e099814a6def439fe8a.html  dir_e914ee4d4a44400f1fdb170cb4ead18a.html  dir_f6227287712d84441d1f97cc74cea9a5.html  error_8hpp_source.html  files.html  frequency_8hpp_source.html  functions.html  functions_func.html  hierarchy.html  index.html  md___users_ahmed__work__math_fin__r_e_a_d_m_e.html  pages.html  period_8hpp.html  period_8hpp_source.html  struct_math_fin_1_1detail_1_1long__period__holder-members.html  struct_math_fin_1_1detail_1_1long__period__holder.html  struct_math_fin_1_1detail_1_1short__period__holder-members.html  struct_math_fin_1_1detail_1_1short__period__holder.html  test.html  timeunit_8hpp.html  timeunit_8hpp_source.html  types_8hpp.html  types_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_4.js  searchdata.js
docs/latex/: annotated.tex  class_fin_math_1_1_date.tex  class_fin_math_1_1_error.eps  class_fin_math_1_1_error.tex  class_math_fin_1_1_period.tex  dir_296d53ceaeaa7e099814a6def439fe8a.tex  dir_e914ee4d4a44400f1fdb170cb4ead18a.tex  dir_f6227287712d84441d1f97cc74cea9a5.tex  files.tex  hierarchy.tex  md___users_ahmed__work__math_fin__r_e_a_d_m_e.tex  period_8hpp.tex  refman.tex  struct_math_fin_1_1detail_1_1long__period__holder.tex  struct_math_fin_1_1detail_1_1short__period__holder.tex  test.tex  timeunit_8hpp.tex  types_8hpp.tex
docs/man/man3/: FinMath_Date.3  FinMath_Error.3  MathFin_Period.3  MathFin_detail_long_period_holder.3  MathFin_detail_short_period_holder.3  _Users_ahmed_Work_MathFin_base_.3  _Users_ahmed_Work_MathFin_math_.3  _Users_ahmed_Work_MathFin_time_.3  md___users_ahmed__work__math_fin__r_e_a_d_m_e.3  period.hpp.3  test.3  timeunit.hpp.3  types.hpp.3
docs/pages/: datetime.docs
examples/: Makefile.am
m4/: boost.m4
math/: Makefile  Makefile.am  Makefile.in  math.cpp  mathTest.cpp
math/.deps/: math.Plo  mathTest.Po
src/: Makefile  hello  main.cpp
src/.deps/: main.Po
time/: Makefile  Makefile.am  Makefile.in  businessdayconvention.cpp  businessdayconvention.h  businessdayconvention.hpp  businessdayconventionTest.cpp  calendar.cpp  calendar.hpp  calendarTest.cpp  date.cpp  date.h  date.hpp  dateTest.cpp  dategeneration.cpp  dategeneration.hpp  daycounter.hpp  frequency.cpp  frequency.hpp  libMathFinTime.la  month.cpp  month.hpp  period.cpp  period.hpp  periodTest.cpp  timeunit.cpp  timeunit.hpp  weekday.cpp  weekday.hpp
time/.deps/: businessdayconventionTest.Po  libTime_la-businessdayconvention.Plo  libTime_la-date.Plo
time/calendars/: Makefile.am  australia.cpp  australia.hpp  brazil.cpp  brazil.hpp  nullcalendar.hpp  target.cpp  target.hpp  unitedkingdom.cpp  unitedkingdom.hpp  unitedstates.cpp  unitedstates.hpp
time/daycounters/: Makefile.am  actual360.hpp  actual365fixed.hpp  actual365nl.hpp  actualactual.cpp  actualactual.hpp  actualactualTest.cpp  business252.cpp  business252.hpp  business252Test.cpp  daycountersTest  one.hpp  oneTest.cpp  simpledaycounter.cpp  simpledaycounter.hpp  simpledaycounterTest.cpp  thirty360.cpp  thirty360.hpp  thirty360Test.cpp
