
# Copyright (C) 2017 Ahmed Riza

# This file is part of MathFin.

# This program is free software: you  can redistribute it and/or modify it
# under the  terms of the GNU  General Public License as  published by the
# Free Software Foundation,  either version 3 of the License,  or (at your
# option) any later version.

# This  program  is distributed  in  the  hope  that  it will  be  useful,
# but  WITHOUT  ANY  WARRANTY;  without   even  the  implied  warranty  of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
# Public License for more details.

# You should have received a copy  of the GNU General Public License along
# with this program. If not, see <http://www.gnu.org/licenses/>.

AM_CPPFLAGS = -std=c++11 $(BOOST_CPPFLAGS) -I$(top_srcdir) -I$(top_builddir)

this_includedir=${includedir}/${subdir}

this_include_HEADERS = \
	australia.hpp \
	brazil.hpp \
	nullcalendar.hpp \
	target.hpp \
	unitedkingdom.hpp \
	unitedstates.hpp
